Fix HTML structure and ensure proper formatting

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <div style="margin-top:12px;display:flex;gap:10px;flex-wrap:wrap">
               <a class="btn" href="Download.png" download>Logo herunterladen</a>
               <a class="btn" href="aufgaben.pdf" target="_blank" rel="noopener">Arbeitsblatt (PDF)</a>
-              <a class="btn" href="https://www.hrsaaf.de" target="_blank" rel="noopener">Schulseite</a>
+              <a class="btn" href="https://www.hrsaaf.de" target="_blank" rel="noopener">Iserv der schule </a>
             </div>
           </div>
         </section>
@@ -251,4 +251,5 @@
       </footer>
     </div>
   </body>
+
 </html>
