--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
             <h4 style="margin-bottom:8px">🌐 Schnellzugriff</h4>
             <p class="small" style="margin-bottom:12px">Nützliche Seiten für die Klasse.</p>
             <div style="display:flex;flex-direction:column;gap:10px">
-              <a class="btn" href="https://www.hrsaaf.de" target="_blank" rel="noopener">Zur Schulwebsite</a>
-              <a class="btn" href="https://www.iserv.de" target="_blank" rel="noopener" style="background:linear-gradient(135deg,#06b6d4,#0ea5a4)">Zu iServ</a>
+              <a class="btn" href="https://https://www.schule-altes-amt-friedeburg.de" target="_blank" rel="noopener">Zur Schulwebsite</a>
+              <a class="btn" href="https://www.hrsaaf.de" target="_blank" rel="noopener" style="background:linear-gradient(135deg,#06b6d4,#0ea5a4)">Zu iServ</a>
             </div>
           </div>
 
@@ -253,3 +253,4 @@
   </body>
 
 </html>
+
